# qemu-e2k-tests

./: README.md  e2k-linux.txt  meson.build
cross/: e2k-linux-old.txt  e2k-linux.txt  e2k-v1.txt  e2k-v2.txt  e2k-v3.txt  e2k-v4.txt  e2k-v5.txt  e2k-v6.txt  e2k-v7.txt
scripts/: setup.sh  test.sh
tests/: meson.build
tests/asm/: meson.build
tests/asm/aau/: mova-fmt.S  mova-unaligned.S  mova.S  staa-1.S
tests/asm/base/: excp-1.S  excp-2.S  excp-3.S  excp-4.S  excp-5.S  excp-6.S  excp-7.S  excp-8.S  excp-9.S  exit-0.S  exit-1.S  same-reg-output-1.S  signal-1.S  template.S
tests/asm/common/: meson.build  mmap.S  start.S
tests/asm/ct/: call-1.S  call-2.S  call-invalidate-pregs-1.S  call-invalidate-pregs-2.S  call-reset-ctpr-1.S  call-reset-ctpr-2.S  call-reset-ctpr-3.S  ct-1.S  ibranch-1.S  ret-reset-ctpr-1.S  ret-reset-ctpr-2.S  ret-reset-ctpr-3.S
tests/asm/dam/: dam-1.S  dam-2.S
tests/asm/decode/: ales25-1.S  lit-1.S  store-load-group-1.S  store-load-group-2.S  store-load-group-3.S  unaligned-1.S  unaligned-2.S  unaligned-3.S  unaligned-4.S
tests/asm/f80/: fxaddxx-1.S  fxmulxx-1.S  fxsubxx-1.S  movif-movfi-1.S
tests/asm/include/: common.S  test_end.S  test_start.S
tests/asm/include/common/: mmap.h  syscall_nr.h
tests/asm/int/: basic-1.S  bitrev-1.S  cmpd-1.S  ctpr-write-1.S  ctpr-write-2.S  getfd-1.S  insfd-1.S  rwd-alc-rrd-1.S  rwd-rrd-1.S  sxt-1.S
tests/asm/loop/: loop-1.S
tests/asm/lsr/: lsr-1.S  lsr-2.S  lsr-3.S  rwd-lsr-delay-1.S  rwd-lsr-delay-2.S  strmd-1.S
tests/asm/plu/: andp-1.S  andp-10.S  andp-2.S  andp-3.S  andp-4.S  andp-5.S  andp-6.S  andp-7.S  andp-8.S  andp-9.S  cascading-1.S  cascading-2.S  clp-arg-1.S  clp-arg-2.S  clp-arg-3.S  clp-arg-4.S  clp-arg-5.S  clp-arg-6.S  clp-arg-7.S  landp-1.S  movep-1.S  movep-2.S  movep-3.S  movep-4.S  movep-5.S  movtd-ctpr-cond-1.S
tests/asm/qp/: stmqp-1.S  stmqp-page-1.S  stmqp-page-2.S  stmqp-unaligned-1.S  stmqp-unaligned-2.S
tests/asm/sm/: dbl-1.S  gettagd-1.S  gettagd-2.S  insfd-1.S  insfd-2.S  ldd-1.S  merged-1.S  merged-2.S  merged-3.S  merged-4.S  merged-5.S  movtd-ct-1.S  movtd-ct-2.S  puttagd-1.S  puttagd-2.S  puttagd-3.S  puttagd-4.S  puttags-1.S  puttags-2.S  qual-1.S  qual-10.S  qual-11.S  qual-2.S  qual-3.S  qual-4.S  qual-5.S  qual-6.S  qual-7.S  qual-8.S  qual-9.S  qual-call-1.S  qual-ct-1.S  qual-ct-2.S  qual-ibranch-1.S  std-1.S  udivs-1.S
tests/asm/syscall/: fast-gettimeofday-1.S  get-pcs-offset-1.S  get-pcs-size-1.S  get-ps-size-1.S  invalid-arg-1.S  invalid-arg-hi-1.S  invalid-nr-1.S  invalid-nr-hi-1.S  invalid-sdisp-1.S  read-ps-ex-1.S  read-ps-ex-unaligned-1.S  write-ps-ex-1.S  zero-wsz-1.S
tests/asm/v7/: qpack-1.S
tests/asm/win/: br-1.S  dbl-1.S  out-of-bounds-1.S  out-of-bounds-2.S  out-of-bounds-3.S  same-reg-access-1.S  same-reg-access-2.S  setbn-1.S  setbn-invalidate-regs-1.S  setbn-invalidate-regs-2.S  setbp-invalidate-regs-1.S  setbp-invalidate-regs-2.S  setwd-1.S  setwd-2.S  setwd-invalidate-regs-1.S  setwd-invalidate-regs-2.S  setwd-psize-1.S  setwd-psize-2.S
tests/c/: meson.build
tests/c/include/: common.h
tests/c/simple/: create-thread.c
